Implemented function to add task-card into the To Do box. Made task-card draggable in box

--- a/02-Challenge/Develop/index.html
+++ b/02-Challenge/Develop/index.html
@@ -22,10 +22,31 @@
   </header>
   <div class="container">
     <div class="text-center mb-5">
-      <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#formModal">Add Task</button>
+      <button onclick="handleAddTask(this)" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#formModal">Add Task</button>
     </div>
     <!-- Todo: Create a modal with a form to add tasks -->
+    <div id="dialog" class="dialog">
 
+      <!-- Modal content -->
+      <div class="dialog-content">
+        <form id="task-form">
+          <fieldset>
+            <label>Task</label>
+            <input type="text" id="task" class="text ui-widget-content ui-corner-all">
+            <label>Due Date</label>
+            <input type="text" id="datepicker" class="text ui-widget-content ui-corner-all">
+            <label>Description</label>
+            <input type="text" id="description" class="text ui-widget-content ui-corner-all">
+       
+            <!-- Allow form submission with keyboard without duplicating the dialog button -->
+            <button type="submit" value="Submit" class="btn btn-info">
+              Submit
+            </button>
+      
+          </fieldset>
+        </form>
+      </div>
+    </div>
 
     <div class="row swim-lanes text-center justify-content-between">
       <div class="col-12 col-lg-4 d-flex">
